--- a/package.json
+++ b/package.json
@@ -11,15 +11,36 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@mdx-js/rollup": "^3.1.0",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "github-slugger": "^2.0.0",
+    "gray-matter": "^4.0.3",
     "isbot": "^4.1.0",
+    "lucide-react": "^0.474.0",
+    "mdx-bundler": "^10.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-frontmatter": "^5.0.0",
+    "remark-heading-id": "^1.0.1",
+    "remark-mdx-frontmatter": "^5.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.13.1",
+    "@types/node": "^22.13.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -34,8 +55,11 @@
     "postcss": "^8.4.38",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "prisma": "^6.3.0",
+    "remix-development-tools": "^4.7.7",
     "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3",
     "vite": "^5.1.0",
     "vite-tsconfig-paths": "^4.2.1"
   },
