--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
+    "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "github-slugger": "^2.0.0",
@@ -39,6 +40,7 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.4",
     "@remix-run/dev": "^2.13.1",
     "@types/node": "^22.13.0",
     "@types/react": "^18.2.20",
@@ -55,7 +57,6 @@
     "postcss": "^8.4.38",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "prisma": "^6.3.0",
     "remix-development-tools": "^4.7.7",
     "tailwindcss": "^3.4.4",
     "tsx": "^4.19.2",
