--- a/package.json
+++ b/package.json
@@ -25,16 +25,23 @@
     "gray-matter": "^4.0.3",
     "isbot": "^4.1.0",
     "lucide-react": "^0.474.0",
+    "mathlive": "^0.103.0",
     "mdx-bundler": "^10.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-format": "^5.0.1",
+    "rehype-mathjax": "^6.0.0",
     "rehype-pretty-code": "^0.14.0",
+    "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
+    "remark-directive": "^3.0.1",
     "remark-frontmatter": "^5.0.0",
     "remark-heading-id": "^1.0.1",
+    "remark-math": "^6.0.0",
     "remark-mdx-frontmatter": "^5.0.0",
+    "remark-oembed": "^1.2.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "unist-util-visit": "^5.0.0"
@@ -45,6 +52,7 @@
     "@types/node": "^22.13.0",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/remark-oembed": "^1.2.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "autoprefixer": "^10.4.20",
