--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "remark": "^15.0.1",
     "remark-directive": "^3.0.1",
     "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.0",
     "remark-heading-id": "^1.0.1",
     "remark-math": "^6.0.0",
     "remark-mdx-frontmatter": "^5.0.0",
